--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "overrides": {
+    "lovable-tagger": {
+      "vite": "$vite"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
